feat(최신 뉴스 목록 업데이트): 최신 뉴스 목록 업데이트

--- a/FE/src/css/font.css
+++ b/FE/src/css/font.css
@@ -3,3 +3,17 @@
 .Jua {
   font-family: "Jua", sans-serif;
 }
+
+.center {
+  text-align: center;
+  margin: auto;
+}
+
+.input {
+  width: 200px;
+  height: 40px;
+  border-radius: 5px;
+  background-color: aliceblue;
+  color:black;
+  padding: .8em .5em;
+}
